--- a/pres/03-osier-demonstration.tex
+++ b/pres/03-osier-demonstration.tex
@@ -21,7 +21,7 @@
     \end{block}
 \end{frame}
 
-\subsection{\gls{set} History and Methodology}
+\subsection{SET Tool History and Methodology}
 \begin{frame}
     \frametitle{Identifying promising fuel cycles}
     \begin{block}{Which fuel cycle should the U.S. pursue?}
