--- a/pres/05-bucket-02.tex
+++ b/pres/05-bucket-02.tex
@@ -1,4 +1,4 @@
-\section{Bucket \#2: Energy Justice and Modeling in Illinois}
+\section{Energy Justice and Modeling in Illinois}
 
 \subsection{Background}
 
@@ -143,38 +143,71 @@
 \subsection{Results}
 \begin{frame}
     \frametitle{Research Question \#1: How much are \glspl{esom} used?}
-    \begin{block}{Key Takeaways}    
+    \begin{block}{State Level}
         \begin{enumerate}
-            \item At the municipal level: Very little. This is due to structural barriers.
-            \item At the state level: some contracted work for procurement plans.
+            \item Used by the IPA for procurement plans
+            \item Typically contracted to third parties
+            \item Limited by: Deregulation of Illinois utilities
         \end{enumerate}
     \end{block}
-    \begin{block}{Who can benefit from modeling?}
+    \pause
+    \begin{block}{Municipal Level}
+        Barriers and limitations:    
         \begin{enumerate}
+            \item Lack of expertise
+            \item Lack of staff capacity
+            \item Structural barriers (e.g., resource ownership)
+        \end{enumerate}
+    \end{block}
+\end{frame}
+\begin{frame}
+    \frametitle{Research Question \#1: Continued}
+    \begin{block}{Who can benefit from modeling?}
+        \begin{enumerate}[<+->]
             \item The state of Illinois (e.g., using modeling to develop energy targets).
-            \item Municipalities which own their own generation and/or distribution (e.g., UIUC).
+            \item Municipalities that own their own generation and/or distribution (e.g., UIUC).
             \item Municipalities that are interested in behind-the-meter generation or distributed resources.
+            \item Non-governmental organizations interested in lobbying decision-makers (e.g., Naperville's NEST,
+            or the Union of Concerned Scientists.)
         \end{enumerate}
     \end{block}
     
 \end{frame}
 
 \begin{frame}
-    \frametitle{Research Question \#2: How is justice considered?}
-    \begin{block}{Key Takeaways}    
-        \begin{itemize}[<+->]
-            \item The state of Illinois discursively considers justice. (E.g., Justice-40, ``equity-eligible'' designation)
-            \item Some municipalities have dedicated justice and equity staff, but it seems siloed from planning.
-            \item There is a large focus on distributive justice.
-        \end{itemize}
-    \end{block}
-    \begin{block}{More to be done}
+    \frametitle{How is justice considered?}
+    \textcolor{red}{NOT FINISHED / TEST SLIDE}
+    \begin{block}{State level}
         \begin{enumerate}
-            \item Greater process transparency is needed to facilitate procedural justice.
-            \item More opportunities to integrate notions of justice into planning processes.
+            \item Emphasis on distributive justice (e.g., Justice-40, ``equity-eligible'' designation)
+            \item 
+        \end{enumerate}
+        
+    \end{block}
+    \begin{block}{Municipal level}
+        \begin{enumerate}
+            \item Some municipalities have dedicated justice and equity staff, but it seems siloed from planning.
+            \item IMEA could use more transparency
         \end{enumerate}
     \end{block}
 \end{frame}
+
+% \begin{frame}
+%     \frametitle{Research Question \#2: How is justice considered?}
+%     \begin{block}{Key Takeaways}    
+%         \begin{itemize}[<+->]
+%             \item The state of Illinois discursively considers justice. (E.g., Justice-40, ``equity-eligible'' designation)
+%             \item Some municipalities have dedicated justice and equity staff, but it seems siloed from planning.
+%             \item There is a large focus on distributive justice.
+%         \end{itemize}
+%     \end{block}
+%     \begin{block}{More to be done}
+%         \begin{enumerate}
+%             \item Greater process transparency is needed to facilitate procedural justice.
+%             \item More opportunities to integrate notions of justice into planning processes.
+%         \end{enumerate}
+%     \end{block}
+% \end{frame}
 
 \begin{frame}
     \frametitle{Research Question \#3: How useful is \gls{osier}? I}
@@ -182,8 +215,9 @@
     Despite the lack of municipal modeling, \gls{osier} was well received.
 
     \begin{block}{Select Quotes}
-        \setbeamercovered{transparent}
-        \begin{itemize}[<+,3>]
+        % \setbeamercovered{transparent}
+        % \begin{itemize}[<+,3>]
+        \begin{itemize}
             \item   \textit{[Y]ou need a tool like this in order to properly balance other
                         public policy objectives (Interviewee IP3).}  
             \item \textit{I mean this is exactly what we need, an energy model that shows us
