--- a/pres/06-future-work.tex
+++ b/pres/06-future-work.tex
@@ -1,6 +1,17 @@
 \section{Conclusions \& Future Work}
 
 \begin{frame}
+    \frametitle{Problems solvable with \gls{osier}}
+
+    \begin{enumerate}
+        \item Deciding among nuclear reactor designs
+        \item Budget-constrained optimization
+        \item ...
+    \end{enumerate}
+
+\end{frame}
+
+\begin{frame}
     \frametitle{Future Work}
 
     \begin{itemize}
