--- a/pres/07-backup-slides.tex
+++ b/pres/07-backup-slides.tex
@@ -6,7 +6,7 @@
 % Types of Justice
 
 \begin{frame}
-    \frametitle{Distributional}
+    \frametitle{Distributive}
     \begin{columns}
         \column[t]{3cm}
         \begin{figure}
@@ -28,7 +28,7 @@
             \end{tikzpicture}}
         \end{figure}
         \column[t]{7cm}
-        \begin{block}{Distributional Justice}
+        \begin{block}{Distributive Justice}
             Related to the distribution of burdens and benefits.
         \end{block}
         \begin{block}{Normative Question}
@@ -90,7 +90,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Recognitional}
+    \frametitle{Recognition}
     \begin{columns}
         \column[t]{3cm}
         \begin{figure}
@@ -112,7 +112,7 @@
             \end{tikzpicture}}
         \end{figure}
         \column[t]{7cm}
-        \begin{block}{Recognitional Justice}
+        \begin{block}{Recognition Justice}
             Related to social value of people or groups derived from
             relationships, laws, and cultural standing.
         \end{block}
@@ -132,4 +132,16 @@
         \end{block}
     \end{columns}
     
+\end{frame}
+
+\begin{frame}
+    \frametitle{Computational Resources}
+
+    \begin{itemize}
+        \item Platform: 2024 MacBook Pro
+        \item Operating System: macOS Sequoia 15.5
+        \item Memory: 48 GB
+        \item CPU: M4 Pro (10 performance cores, 4 efficiency cores)
+    \end{itemize}
+
 \end{frame}
