--- a/pres/2025-dotson-defense.tex
+++ b/pres/2025-dotson-defense.tex
@@ -174,9 +174,9 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \input{04-motivating-interlude.tex}
 \input{05-bucket-02.tex}
 \input{06-future-work.tex}
+\input{acks}
 \input{07-backup-slides.tex}
 
-% \input{acks}
 %%--------------------------------%%
 %%--------------------------------%%
 \begin{frame}[allowframebreaks]
