--- a/pres/acks.tex
+++ b/pres/acks.tex
@@ -1,6 +1,12 @@
 \begin{frame}
   \frametitle{Acknowledgement}
-        Acknowledgements should include both people who helped and funding 
-        streams. If you are funded by an NEUP grant, that number usually goes 
-        here. .
+    This work was supported in part by 
+    \begin{itemize}
+      \item The Nuclear Regulatory Commission Fellowship Program
+      \item The Felix T. Adler Fellowship from the NPRE Department at UIUC
+      \item The Union of Concerned Scientists Professional Development Fund
+    \end{itemize}
+
+    I also thank the members of the Advanced Reactors and Fuel Cycles (ARFC) research group for
+    their valuable feedback and code reviews.
 \end{frame}
