--- a/pres/02-bucket-01.tex
+++ b/pres/02-bucket-01.tex
@@ -1,4 +1,4 @@
-\section{Bucket \#1: Technical Improvements to \gls{osier}}
+\section{Technical Improvements to \gls{osier}}
 
 \subsection{Logical Dispatch Algorithm}
 
@@ -182,8 +182,13 @@
         \end{itemize}
     \end{enumerate}
 
-\end{frame}
+    \pause
 
+    \begin{block}{Next up:}
+         Modeling-to-generative alternatives (MGA) --- addressing structural uncertainty.
+    \end{block}
+
+\end{frame}
 
 \subsection{N-Dimensional \gls{mga}}
 
@@ -210,6 +215,15 @@
             \caption{Simple \gls{mga} procedure.}
         \end{figure}
     \end{columns}
+\end{frame}
+
+\begin{frame}
+    \frametitle{MGA in \gls{osier}}
+    \begin{figure}
+        \centering
+        \resizebox{0.75\columnwidth}{!}{\input{../docs/figures/04_benchmark_chapter/osier_mga_subset_01.pgf}}
+        \caption{Pareto front and sub-optimal space for MGA in \gls{osier}. This is the same problem from Figure \ref{fig:osier-temoa-benchmark}.}
+    \end{figure}
 \end{frame}
 
 \begin{frame}
