final draft of slides

--- a/pres/01-introduction.tex
+++ b/pres/01-introduction.tex
@@ -296,7 +296,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\columnwidth]{images/osier_dispatch_example.png}
-        \caption{\gls{osier} dispatch for an energy system with natural gas plus battery storage.}
+        \caption{\gls{osier} dispatch for an energy system with nuclear plus battery storage.}
     \end{figure}
 \end{frame}
 
@@ -331,7 +331,7 @@ fontsize=\footnotesize, linenos ]{python}
 
         \begin{figure}
             \centering
-            \includegraphics[width=0.85\columnwidth]{images/osier_constraint.png}
+            \includegraphics[width=0.75\columnwidth]{images/osier_constraint.png}
             \caption{Osier Pareto front with and without emissions constraint.}
         \end{figure}
 \end{frame}
@@ -348,7 +348,7 @@ fontsize=\footnotesize, linenos ]{python}
 
 
 \begin{frame}
-    \frametitle{Documenation as a feature}
+    \frametitle{Documentation as a feature}
     \url{https://osier.readthedocs.io}
 \end{frame}
 
