--- a/pres/05-bucket-02.tex
+++ b/pres/05-bucket-02.tex
@@ -20,6 +20,7 @@
             \begin{enumerate}[<+->]
                 \item Illinois is among the most ambitious states for shifting
                 to clean energy.
+                \item Illinois has the most nuclear plants.
                 \item Illinois has a variety of mechanisms for energy choice.
             \end{enumerate}
         \end{block}
@@ -118,6 +119,7 @@
                 \item Semi-structured interiews with an interview guide.
             \end{itemize}
         \end{block}
+        \pause
         \column[t]{3.33cm}
         \begin{block}{Transcription and Analysis}
             \begin{itemize}[<+->]
@@ -129,6 +131,7 @@
                 \cite{braun_using_2006}.
             \end{itemize}
         \end{block}
+        \pause
         \column[t]{3.33cm}
         \begin{block}{Supplemental Document Review}
             Supplemental documents (where relevant) include
@@ -176,18 +179,19 @@
 
 \begin{frame}
     \frametitle{How is justice considered?}
-    \textcolor{red}{NOT FINISHED / TEST SLIDE}
     \begin{block}{State level}
         \begin{enumerate}
             \item Emphasis on distributive justice (e.g., Justice-40, ``equity-eligible'' designation)
-            \item 
+            \item Some awareness of procedural justice.
         \end{enumerate}
         
     \end{block}
+    \pause
     \begin{block}{Municipal level}
         \begin{enumerate}
             \item Some municipalities have dedicated justice and equity staff, but it seems siloed from planning.
-            \item IMEA could use more transparency
+            \item Energy decisions are primarily based on cost.
+            \item Planning processes could be more transparent (e.g., IMEA)
         \end{enumerate}
     \end{block}
 \end{frame}
@@ -210,7 +214,7 @@
 % \end{frame}
 
 \begin{frame}
-    \frametitle{Research Question \#3: How useful is \gls{osier}? I}
+    \frametitle{Research Question \#3: How useful is \gls{osier}?}
 
     Despite the lack of municipal modeling, \gls{osier} was well received.
 
@@ -230,7 +234,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Research Question \#3: How useful is \gls{osier}? II}
+    \frametitle{Research Question \#3: How useful is \gls{osier}?}
     Interviewees were impressed by three main things. 
     \begin{enumerate}[<+->]
         \item They appreciated that \gls{osier} could model objectives besides cost.
