--- a/pres/06-future-work.tex
+++ b/pres/06-future-work.tex
@@ -6,7 +6,8 @@
     \begin{enumerate}
         \item Deciding among nuclear reactor designs
         \item Budget-constrained optimization
-        \item ...
+        \item Varying scales: from individual buildings to national
+        \item 
     \end{enumerate}
 
 \end{frame}
