adds backup slide

--- a/pres/07-backup-slides.tex
+++ b/pres/07-backup-slides.tex
@@ -143,5 +143,14 @@
         \item Memory: 48 GB
         \item CPU: M4 Pro (10 performance cores, 4 efficiency cores)
     \end{itemize}
+\end{frame}
 
+
+\begin{frame}
+    \frametitle{Solution highlighting}
+    \begin{figure}
+        \centering
+        \resizebox{\columnwidth}{!}{\input{../docs/figures/04_benchmark_chapter/4_obj_objective_space_total_cost.pgf}}
+        \caption{The five solutions with the lowest lifecycle CO2 emissions.}
+    \end{figure}
 \end{frame}
