fixes minor error in abstract

--- a/docs/01-abstract.tex
+++ b/docs/01-abstract.tex
@@ -14,7 +14,7 @@ unmodeled or \textit{unmodelable} objectives --- by extending the conventional
 modeling-to-generate-alternatives approach into N-dimensional objective space.
 This approach does not promise to model the unmodelable, rather it recognizes
 that any presentation of ``optimal'' solutions will necessarily miss these
-unmodelable priorities and that interesting solutions may be contained in
+unmodelable priorities and that interesting solutions may be contained in a
 models sub-optimal space.
 
 This thesis verified \texttt{Osier}'s suitability for energy modeling problems
