--- a/docs/1-introduction/1-introduction.tex
+++ b/docs/1-introduction/1-introduction.tex
@@ -43,45 +43,81 @@ source \cite{united_nations_economic_commission_for_europe_carbon_2022}.
 \FloatBarrier
 
 Therefore, to achieve the almost universally shared goal of halting and
-reversing the effects of climate change \cite{united_nations_paris_2015}, our
-globalized society must transition away from fossil fuels to clean energy
-technologies such as nuclear and renewable energy and switch our transportation
-systems to electric or hydrogen powered vehicles
-\cite{intergovernmental_panel_on_climate_change_climate_2021}. 
-
+reversing the effects of anthropogenic climate change
+\cite{united_nations_paris_2015}, our globalized society must transition away
+from fossil fuels to clean energy technologies such as nuclear and renewable
+energy and switch our transportation systems to electric or hydrogen powered
+vehicles \cite{intergovernmental_panel_on_climate_change_climate_2021}.
 Naturally, the importance of modeling energy systems to gain insight and form
 strategies to achieve this transition has grown. Especially since the spatial
 and temporal complexities are also expected to grow with greater penetration of
 \ac{vre}, such as solar and wind energy --- two energy sources that are
 spatially diffuse and temporally challenging to predict. A class of tools called
 \acp{esom} are the most common method for understanding our energy systems.
-However, while climate change may be the most immediate existential threat to
-society \cite{hickman_climate_2021}, it is a focusing issue that brings
-challenges of equity and disproportional impacts to the fore. These latter
-challenges have always been concomitant with our energy system, but energy
-system modeling has largely ignored the ways energy systems mediate
-socio-political power alongside transporting electrons and fuel. For example,
-fossil fueled power plants have always been associated with air pollution and
-worsened health for nearby communities --- commonly poorer and black
-communities, which are already marginalized, evincing a violation of fairness
-and justice principles \cite{mohai_which_2015}. Studying these consequences of
-our energy choices historically belonged to domain of the environmental justice
-literature \cite{schlosberg_reconceiving_2004,mohai_environmental_2009} but has
-developed further into the discipline of energy justice
-\cite{sovacool_energy_2015}. 
+
+However, current \acp{esom} face critical limitations that hinder their ability
+to support a just energy transition. Existing \acp{esom} optimize exclusively
+for cost, providing decision-makers with
+a single ``best'' solution. Yet real-world energy decisions involve tradeoffs
+among multiple competing objectives, such as cost, carbon emissions, job
+creation, land use, and equity considerations. This single-objective approach
+prevents meaningful public engagement, since communities cannot deliberate over
+priorities when presented with only one supposedly optimal answer. Further,
+while climate change is among the most immediate existential threats to society
+\cite{hickman_climate_2021}, it is also a focusing issue that brings challenges
+of equity and disproportional impacts to the fore. These latter challenges have
+always been concomitant with our energy system, but energy system modeling has
+largely ignored the ways energy systems mediate socio-political power alongside
+transporting electrons and fuel. For example, fossil fueled power plants have
+always been associated with air pollution and worsened health for nearby
+communities --- commonly poorer and black communities, which are already
+marginalized, evincing a violation of fairness and justice principles
+\cite{mohai_which_2015}. 
+% Studying these consequences of our energy choices historically belonged to
+% domain of the environmental justice literature
+% \cite{schlosberg_reconceiving_2004,mohai_environmental_2009} but has developed
+% further into the discipline of energy justice \cite{sovacool_energy_2015}. 
+
+This thesis addresses these limitations by developing \acl{osier}, a tool
+designed to enhance democratic engagement in energy planning. \ac{osier} stores
+comprehensive information about energy generation technologies (e.g., wind,
+solar, nuclear, natural gas, etc.), including their costs, carbon emissions,
+land use requirements, generation variability, and other relevant
+characteristics. Users provide energy demand data and specify multiple,
+simultaneous competing goals (e.g., minimizing cost while maximizing local jobs
+and minimizing \ac{co2} emissions). \ac{osier} then identifies multiple optimal
+energy portfolios --- each specifying how much of each technology type should be
+installed to meet energy demand --- that represent different balances between
+these competing objectives. Rather than prescribing a single solution,
+\ac{osier} generates a set of co-optimal solutions, called a \textit{Pareto
+front}, where improving one objective necessarily worsens another, making
+tradeoffs explicit and negotiable.
+
+It is important to clarify what \ac{osier} is and is not. \ac{osier} is a
+prescriptive optimization tool, not a projection or forecasting model. It
+identifies what should be built to achieve specified goals rather than
+predicting what will happen under various scenarios. \ac{osier} cannot model
+unquantifiable values that defy mathematical formulation, though it can optimize
+proxy metrics (such as using job creation as a proxy for economic development).
+The tool's power lies in making quantifiable tradeoffs explicit and structured,
+thereby enhancing rather than replacing human deliberation. Beyond planning,
+\ac{osier} can serve as an accountability tool, enabling communities and
+advocacy organizations to evaluate whether implemented energy policies align
+with stated priorities.
+
 
 The energy transition will require a great expansion of our energy
-infrastructure to build replace fossil-fueled energy with clean energy and
+infrastructure to replace fossil-fueled energy with clean energy and
 additional transmission networks to carry electrons. Although the technology to
 accomplish this transition is mature, there is still local public opposition to
-many energy projects \cite{wolsink_wind_2007}. Particularly in empowered and
+many energy projects \cite{wolsink_wind_2007}, particularly in empowered and
 affluent communities \cite{stokes_prevalence_2023}. \acp{esom} cannot capture
 these ``human dimensions'' of energy systems despite some awareness of their
 importance \cite{pfenninger_energy_2014}. This is because they only optimize a
 single objective --- cost (or some other aggregated economic metric). People
-have and express preferences over many dimensions simultaneously. Further, even
-in the absence of climate change, incorporating social context into the practice
-of energy modeling remains beneficial since doing so will create substantively
+have and express preferences over many dimensions simultaneously. Further, even in
+the absence of climate change, incorporating social context into the practice of
+energy modeling remains beneficial since doing so will create substantively
 better decisions \cite{wilsdon_see-through_2004}. The solution for enclosing
 this feature of energy system design proposed in this thesis is two-fold. The
 first is to develop an \ac{esom} capable of multi-objective optimization. The
@@ -89,7 +125,6 @@ benefits of multi-objective optimization have been understood for some time, yet
 only recent advances in computing power have made them a practical method for
 energy modeling. Hobbs (1995) wrote:
 
-% \cite{hobbs_optimization_1995}.    
 \begin{quote}
     \blockcquote[p.12]{hobbs_optimization_1995}{Multi-objective methods are more
     appropriately used to help people to understand the problem better, explore
