addresses some singer comments

--- a/docs/2-literature/21-esoms.tex
+++ b/docs/2-literature/21-esoms.tex
@@ -8,7 +8,7 @@ development, or energy system planning for scheduling and acquisition
 available \acp{esom} seldom consider the role of energy systems in creating and
 maintaining inequitable distributions of burdens. \acp{esom} vary significantly
 by the energy sectors they choose to model, the degree of physical detail,
-uncertainty quanitification, and forecasting capabilities. Table \ref{tab:esoms}
+uncertainty quanitification, and forecasting capabilities. Table~\ref{tab:esoms}
 summarizes the capabilities for a comprehensive list of energy system analysis
 tools. These tools are approximately sorted by mathematical formulation, e.g.
 explicit optimization or simulation. The ``\ac{milp}'' column indicates whether
@@ -20,7 +20,7 @@ one objective listed. This means users may choose which objective to optimize.
 None of the tools in Table \ref{tab:esoms} are designed to handle simultaneous
 optimization (i.e., \ac{moo}). For those modeling frameworks that have an
 ``objective'' in Table \ref{tab:esoms}, virtually all of them optimize system
-costs. EnergyScope is the only exception to this, which allows users to optimize
+costs. EnergyScope is the only exception to this; it allows users to optimize
 \ac{ghg} emissions \cite{limpens_energyscope_2019}. \textcolor{black}{The
 ``uncertainty'' column indicates a feature to algorithmically generate model
 runs for testing either parametric or structural uncertainties.
@@ -153,7 +153,7 @@ approximated by minimizing the total cost of energy
 \cite{richstein_cross-border_2014}}. This simplification is valid because demand
 for energy is highly inelastic \cite{heuberger_power_2017, eia_price_2021,
 labandeira_meta-analysis_2017, csereklyei_price_2020}. Figure
-\ref{fig:inelastic} shows the impact of highly inelastic demand.
+\ref{fig:inelastic} shows the impact of completely inelastic demand.
 
 \begin{figure}[H]
   \centering
