--- a/docs/2-literature/23-social-movements.tex
+++ b/docs/2-literature/23-social-movements.tex
@@ -18,7 +18,7 @@ after exposure to a hazard. Although climate change is a worldwide phenomenon,
 vulnerabilities to its hazards are not uniformly distributed. On the contrary,
 the people and communities most likely to be harmed by climate change are
 already harmed by social inequities, a feature called
-\textit{disproportionality} \cite{islam_climate_2017}. For example, low-income
+\textit{disproportionality}~\cite{islam_climate_2017}. For example, low-income
 communities have fewer resources to respond to natural hazards, such as
 hurricanes, floods, or fires, and therefore take longer to recover, compared to
 a communities with relatively greater wealth. Recent work from Simpson et al.
@@ -37,11 +37,11 @@ choices (e.g., demand response) \cite{seck_embedding_2020,rinaldi_what_2022,
 dehghanpour_agent-based_2018} to community responses
 \cite{paterson_community-based_2019, elmallah_frontlining_2022}, national level
 policies \cite{roelfsema_taking_2020, fawzy_strategies_2020}, and levels in
-between. Paterson and Charles \cite{paterson_community-based_2019} developed a
+between. Paterson and Charles developed a
 descriptive typology for community-based hazard responses that also applies to
 national and global scales. The five response categories making up this typology
-are:
-\cite{paterson_community-based_2019}
+are
+\cite{paterson_community-based_2019}:
 \begin{enumerate}
     \item individual and material well-being, which seek to meet individuals'
     basic needs such as food, water, and shelter, as well as livelihood and
