tries a fix for the CI workflow

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -2,26 +2,26 @@
 \label{chapter:introduction}
 \input{1-introduction/1-introduction.tex}
 
-% \chapter{Literature Review}
-% \label{chapter:lit-review}
-% \input{2-literature/20-literature}
+\chapter{Literature Review}
+\label{chapter:lit-review}
+\input{2-literature/20-literature}
 
-% \chapter{\acf{osier}}
-% \label{chapter:osier}
-% \input{3-osier/30-intro}
+\chapter{\acf{osier}}
+\label{chapter:osier}
+\input{3-osier/30-intro}
 
-% \chapter{Benchmark Results}
-% \label{chapter:benchmark-results}
-% \input{4-benchmark-results/40-benchmark.tex}
+\chapter{Benchmark Results}
+\label{chapter:benchmark-results}
+\input{4-benchmark-results/40-benchmark.tex}
 
-% \chapter{Examples with \acs{osier}}
-% \label{chapter:examples}
-% \input{5-examples/50-intro.tex}
+\chapter{Examples with \acs{osier}}
+\label{chapter:examples}
+\input{5-examples/50-intro.tex}
 
-% \chapter{Energy modeling, planning, and justice}
-% \label{chapter:communities}
-% \input{7-interviews/70-outline}
+\chapter{Energy modeling, planning, and justice}
+\label{chapter:communities}
+\input{7-interviews/70-outline}
 
-% \chapter{Conclusions}
-% \label{chapter:conclusions}
-% \input{8-conclusion/80-conclusion.tex}
+\chapter{Conclusions}
+\label{chapter:conclusions}
+\input{8-conclusion/80-conclusion.tex}
