--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -132,21 +132,9 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \hspace{10em} Joyner Lucas\\ 
 \end{dedication}
 
-% \begin{acknowledgments}   
-% People to acknowledge
-% \begin{itemize}
-%     \item Denia Djoki\'c
-%     \item Shannon Anderson (UIUC)
-%     \item Haley Williams (UC Berkeley)
-%     \item Nataly Panczyk
-%     \item Nathan Ryan
-%     \item Jeremy Mettler
-%     \item Gwendolyn Chee
-%     \item Roberto Fairhurst
-%     \item Members of ARFC
-    %   \item John Albers (for securing interviews)
-% \end{itemize}
-% \end{acknowledgments}
+\begin{acknowledgments}   
+\input{02-acks.tex}
+\end{acknowledgments}
 
 {
     \hypersetup{linkcolor=black}  % disable link coloring locally
