adds highlighted table to examples chapter

--- a/docs/5-examples/51-set-tool.tex
+++ b/docs/5-examples/51-set-tool.tex
@@ -224,7 +224,7 @@ solution which suggests a higher qualitative ranking (e.g., ``most'' or
     \caption{Summary of \ac{set} and \ac{osier} data. Highlighted rows indicate
     disagreement between \ac{osier} and \ac{set} results.}
     \label{tab:summary-data}
-    \resizebox*{\textwidth}{!}{\input{tables/summary_data.tex}}
+    \resizebox*{\textwidth}{!}{\input{tables/summary_data_highlighted.tex}}
 \end{table}
 
 \FloatBarrier
