compiles full thesis

--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -132,9 +132,9 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \hspace{10em} Joyner Lucas\\ 
 \end{dedication}
 
-% \begin{acknowledgments}   
-% \input{02-acks.tex}
-% \end{acknowledgments}
+\begin{acknowledgments}   
+\input{02-acks.tex}
+\end{acknowledgments}
 
 {
     \hypersetup{linkcolor=black}  % disable link coloring locally
