omits lof and lot

--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -140,8 +140,8 @@ text width=22em, text centered, rounded corners, minimum height=3em]
     \hypersetup{linkcolor=black}  % disable link coloring locally
     \tableofcontents
     % the Graduate College doesn't recommend including lot or lof
-    \listoftables
-    \listoffigures
+    % \listoftables
+    % \listoffigures
 }
 
 \chapter{List of Abbreviations}
