fixes margin overflow and removes unnecessary equation numbers

--- a/docs/2-literature/22-moop.tex
+++ b/docs/2-literature/22-moop.tex
@@ -52,11 +52,11 @@ weights, $w_i$, and the aggregated objective becomes
 &x \in \vec{X}\nonumber
 \intertext{where}
 &F_i \text{ is an arbitrary objective function,}\nonumber\\
-&w_i \text{ is the weight for objective function $F_i$}\\
+&w_i \text{ is the weight for objective function $F_i$}\nonumber\\
 &J \text{ is the aggregated objective,}\nonumber\\
 &g \text{ is a constraint,}\nonumber\\
 &p \text{ is an arbitrary parameter of $g$,}\nonumber\\
-&\vec{X} \text{ is the set of decision variables.}
+&\vec{X} \text{ is the set of decision variables.}\nonumber
 \end{align}
 \noindent
 These weights are varied in order to sample points along the Pareto-front.
