--- a/docs/4-benchmark-results/40-1-technology-data.tex
+++ b/docs/4-benchmark-results/40-1-technology-data.tex
@@ -1,6 +1,5 @@
-\ac{osier} can automatically export technology data to a \texttt{pandas}
-dataframe or a \LaTeX table with the
-\texttt{technology\_dataframe} method. \ac{osier} generated Table \ref{tab:tech-table}, which summarizes the
+\ac{osier}'s \texttt{technology\_dataframe} method can automatically export technology data to a \texttt{pandas}
+dataframe or a \LaTeX table. \ac{osier} generated Table \ref{tab:tech-table}, which summarizes the
 technology data used in this thesis. The cost data come from \ac{nrel}'s
 \ac{atb} \cite{national_renewable_energy_laboratory_2023_2023}. Carbon intensity
 data come from a life cycle analysis by the \ac{unece}
