ensures that section titles are consistent between the ToC and the sections

--- a/docs/5-examples/51-set-tool.tex
+++ b/docs/5-examples/51-set-tool.tex
@@ -44,7 +44,7 @@ that include every stage of the fuel cycle.
   \label{fig:nuclear-fuel-cycle}
 \end{figure}
 
-\subsection{\ac{set} Metrics and Methodology}
+\subsection{\acs{set} Metrics and Methodology}
 
 The \ac{set} is an Excel-based application containing metric data from the
 Nuclear Fuel Cycle Evaluation and Screening Study \cite{wigeland_nuclear_2014}
@@ -83,27 +83,29 @@ the data.
 
 \FloatBarrier
 
-\subsection{Limitations of the \ac{set}} Despite its status as the most
-comprehensive available tool for evaluating fuel cycles in the Study, the
-\ac{set} has some limitations primarily with the methods the Study used for
-drawing conclusions. First, the \ac{set} does not consider Pareto optimality.
-Users are able to adjust the weights for different objectives to obtain
-different results, but the full space of options is obfuscated from users.
-Second, the Study's authors binned data on two occasions, first to generate the
-evaluation groups and a second time to make the analysis more tractable. The
-\ac{set} calculates \ac{eg} performance based on these secondary bins, as shown
-in Figure \ref{fig:bin-plot}. This exacerbates differences among \acp{eg} in
-different bins and eliminates differences among \acp{eg} in the same bin.
-Further challenging the comparison of the \acp{eg}. Lastly, the \ac{set} relies
-totally on expert input. This is appropriate for generating data for each
-\ac{eg} or even each fuel cycle option. It is unreasonable to expect
-non-technical stakeholders to opine on which isotopes should be separated, or
-whether a reactor should have a fast or thermal spectrum. But such stakeholders
-can certainly weigh-in on the tradeoffs and prioritization of different metrics
-in the Study based on the values and priorities guiding their choice. This
-example with \ac{osier} addresses these gaps by using raw data from the Study to
-identify Pareto optimal solutions and present them in a manner that could be
-used for deliberation with various stakeholders. 
+\subsection{Limitations of the \acs{set}} 
+
+Despite its status as the most comprehensive available tool for evaluating fuel
+cycles in the Study, the \ac{set} has some limitations primarily with the
+methods the Study used for drawing conclusions. First, the \ac{set} does not
+consider Pareto optimality. Users are able to adjust the weights for different
+objectives to obtain different results, but the full space of options is
+obfuscated from users. Second, the Study's authors binned data on two occasions,
+first to generate the evaluation groups and a second time to make the analysis
+more tractable. The \ac{set} calculates \ac{eg} performance based on these
+secondary bins, as shown in Figure \ref{fig:bin-plot}. This exacerbates
+differences among \acp{eg} in different bins and eliminates differences among
+\acp{eg} in the same bin. Further challenging the comparison of the \acp{eg}.
+Lastly, the \ac{set} relies totally on expert input. This is appropriate for
+generating data for each \ac{eg} or even each fuel cycle option. It is
+unreasonable to expect non-technical stakeholders to opine on which isotopes
+should be separated, or whether a reactor should have a fast or thermal
+spectrum. But such stakeholders can certainly weigh-in on the tradeoffs and
+prioritization of different metrics in the Study based on the values and
+priorities guiding their choice. This example with \ac{osier} addresses these
+gaps by using raw data from the Study to identify Pareto optimal solutions and
+present them in a manner that could be used for deliberation with various
+stakeholders. 
 
 \subsection{\ac{osier} Methodology and Data}
 
