adds final version for grad college deposit

--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -105,6 +105,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 
 \title{Towards a Holistic Integration of Energy Justice and Energy System Engineering}
 \author{Samuel G. Dotson}
+% \department{Nuclear, Plasma, and Radiological Engineering}
 \department{Nuclear, Plasma, and Radiological Engineering}
 % \concentration{}
 \phdthesis
@@ -115,7 +116,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
     Professor James F. Stubbins\\
     Professor Clifford Singer\\
     Assistant Professor McKenzie F. Johnson\\
-    Research Scientist, Denia Djoki\'c}
+    Dr. Denia Djoki\'c, University of Michigan}
 \maketitle
 
 \frontmatter
