--- a/docs/uiucthesis2021.sty
+++ b/docs/uiucthesis2021.sty
@@ -63,7 +63,8 @@
 \newif\if@thesiscrpage \@thesiscrpagetrue
 \let\nocopyrightpage\@thesiscrpagefalse
 \phdthesis
-\college{Grainger College of Engineering}
+% \college{Grainger College of Engineering}
+\college{Graduate College}
 \def\@degreeyear{\number\year}
 \renewcommand\maketitle{
     \if@thesiscrpage
